fix: 修正 Mobile 版的 collapse 按鈕邊框消失

--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -28,4 +28,8 @@ header {
       }
     }
   }
+
+  button[type="button"] {
+    border: var(--bs-border-width) solid #030303 !important;
+  }
 }
